# mcply

./: Cargo.toml
src/: main.rs
src/chat/: chat.rs
src/dyns/: dynamictool.rs  mod.rs
src/generators/: client.rs  server.rs
src/model/: groq.rs  mod.rs  model.rs  ollama.rs
src/protocoal/: http.rs
