[package]
name = "mcply"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "query"] }
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.16.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
axum = "0.8"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }